--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport-local-mongoose": "^8.0.0",
     "path": "^0.12.7",
     "postcss": "^8.4.38",
+    "react-datepicker": "^7.3.0",
     "react-icons": "^5.2.1",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.26.0",
